# android-native-camera2-example

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/sciomagelab/isp/: ExampleInstrumentedTest.java
app/src/androidTest/java/sciomagelab/nativecamandopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LOG.h  NativeCamera.cpp  NativeCamera.h  native-lib.cpp
app/src/main/java/sciomagelab/isp/: MainActivity.java
app/src/main/java/sciomagelab/nativecamandopencv/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sciomagelab/isp/: ExampleUnitTest.java
app/src/test/java/sciomagelab/nativecamandopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary342/: build.gradle
openCVLibrary342/src/main/: AndroidManifest.xml
